--- a/src/app/project-detail/project-detail.component.scss
+++ b/src/app/project-detail/project-detail.component.scss
@@ -17,6 +17,9 @@
       font-size: 120px;
       opacity: 0.25;
       margin: 0;
+      font-family: 'signpainter';
+      font-size: 8em;
+      letter-spacing: 25px;
     }
 
     .project__img--portrait{
