--- a/src/app/expertise/expertise.component.html
+++ b/src/app/expertise/expertise.component.html
@@ -1,7 +1,7 @@
 <section class="expertise" id="expertiseAnimation">
-  <h1 [ngsReveal]="{ reset: true, origin: 'right', distance: '200px', duration: 1500, opacity: 0, scale : 1, delay: 500}">Expertise</h1>
+  <h1 [ngsReveal]="{ reset: false, origin: 'right', distance: '200px', duration: 1500, opacity: 0, scale : 1, delay: 500}">Expertise</h1>
 
-  <div [ngsReveal]="{ reset: true, origin: 'bottom', distance: '200px', duration: 1500, opacity: 0, scale : 1, delay: 500}" class="item">
+  <div [ngsReveal]="{ reset: false, origin: 'bottom', distance: '200px', duration: 1500, opacity: 0, scale : 1, delay: 500}" class="item">
     <span>Ui design</span>
     <ul>
       <li>Webdesign</li>
@@ -11,7 +11,7 @@
   </div>
 
 
-<div [ngsReveal]="{ reset: true, origin: 'bottom', distance: '200px', duration: 1500, opacity: 0, scale : 1, delay: 500}" class="item">
+<div [ngsReveal]="{ reset: false, origin: 'bottom', distance: '200px', duration: 1500, opacity: 0, scale : 1, delay: 500}" class="item">
   <span>Art Direction</span>
   <ul>
     <li>Logos</li>
@@ -20,7 +20,7 @@
 </div>
 
 
-<div [ngsReveal]="{ reset: true, origin: 'bottom', distance: '200px', duration: 1500, opacity: 0, scale : 1, delay: 500}" class="item">
+<div [ngsReveal]="{ reset: false, origin: 'bottom', distance: '200px', duration: 1500, opacity: 0, scale : 1, delay: 500}" class="item">
   <span>Front-end Development</span>
   <ul>
     <li>HTML5/CSS4</li>
