--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -38,14 +38,14 @@
       opacity: 0.45;
       span{
         letter-spacing: -0.05em;
-        font-size: 15em;
+        font-size: 15vw;
         padding-right: 55px;
         font-family: 'signpainter';
       }
     }
     h2{
       color: $green;
-      font-size: 30px;
+      font-size: 3vw;
       width: 500px;
       z-index: 2;
       opacity: 1;
